# dprojectstools

./: .xsecrets  LICENSE  README.md  README2.md  d.sh  p.py  pyproject.toml  test.env
.secrets/: test.json
src/: a.py  b.py
src/dprojectstools/: __init__.py
src/dprojectstools/backups/: __init__.py  restic.py
src/dprojectstools/clipboard/: __init__.py  clipboard.py
src/dprojectstools/commands/: __init__.py  commands.py  p.py
src/dprojectstools/config/: __init__.py  config.py
src/dprojectstools/console/: __init__.py  keys.py  output.py  readKey.py  read_password.py  sequences.py
src/dprojectstools/crypto/: __init__.py  aes.py
src/dprojectstools/db/: __main__.py  db_inspector.py  db_schema.py  generator_cs.py  generator_json.py  generator_sql.py  generator_vb.py  generator_xml.py  schema.json  schema.xsd
src/dprojectstools/docker/: __init__.py  docker.py
src/dprojectstools/editor/: __init__.py  __main__.py  editor.py
src/dprojectstools/git/: __init__.py  git.py
src/dprojectstools/i18n/: translator.py  xgettext.py
src/dprojectstools/images/: fonticons.py
src/dprojectstools/math/: bc.py
src/dprojectstools/secrets/: __init__.py  __main__.py  secrets.py
src/dprojectstools/utils/: __init__.py  env.py  process.py  versions.py  xml.py
src/dprojectstools/xeditor/: __init__.py  __main__.py  hightlight_env.py  hightlight_json.py  hightlight_md.py  hightlight_none.py  hightlight_yml.py  xeditor.py
src/dprojectstools/xsecrets/: __init__.py  __main__.py  model.py  xsecrets.py
