[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # Map the root to "src"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dprojectstools"
version = "0.0.16"
authors = [
  { name="Marc Delos", email="marcdp@dprojects.com" },
]
dependencies = [
    "keyring>=25.6.0",
    "cryptography>=44.0.0",
    "pyperclip>=1.9.0",
    "lxml>=5.3.0",
    "boto3>=1.36.12",
    "charset-normalizer>=3.4.0"
]
description = "A set of development tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
edit = "dprojectstools.editor.__main__:main"
secrets = "dprojectstools.secrets.__main__:main"
i18n-xgettext = "dprojectstools.i18n.xgettext:main"

[project.urls]
Homepage = "https://github.com/marcdp/dprojectstools"
Issues = "https://github.com/marcdp/dprojectstools/issues"
