[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # Map the root to "src"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dprojectstools"
version = "0.0.25"
authors = [
  { name="Marc Delos", email="marcdp@dprojects.com" },
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "python-dotenv>=1.2.2",
    "keyring>=25.6.0",
    "cryptography>=44.0.0",
    "pyperclip>=1.9.0",
    "lxml>=5.3.0",
    "boto3>=1.36.12",
    "charset-normalizer>=3.4.0",
    "sqlalchemy>=2.0.38",
    "websocat>=1.13.0",
    "json5>=0.13.0",
    "PyYAML>=6.0.3"
]
description = "A set of development tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
bc = "dprojectstools.math.bc:main"
xedit = "dprojectstools.xeditor.__main__:main"
fonticons = "dprojectstools.images.fonticons:main"
i18n-xgettext = "dprojectstools.i18n.xgettext:main"
p = "dprojectstools.commands.p:main"
secrets = "dprojectstools.secrets.__main__:main"
db = "dprojectstools.db.__main__:main"


[project.urls]
Homepage = "https://github.com/marcdp/dprojectstools"
Issues = "https://github.com/marcdp/dprojectstools/issues"
